--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,8 @@ jobs:
   build-and-test:
     runs-on: [ubuntu-20.04]
     steps:
-      - name: "Checkout"
+      - 
+        name: "Checkout"
         uses: actions/checkout@v3
       - 
         name: "Setup ROS"
